[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "taskaway"
version = "0.2.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
textual = "^2.0"
tasklib = "^2.5"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^4.0.1"

[tool.poetry.scripts]
taskaway = "taskaway.main:start_application"

[tool.black]
line-length = 120

