[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.poetry]
name = "taskaway"
version = "0.3.3"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
textual = "^2.0"
tasklib = "^2.5"

[tool.poetry.dev-dependencies]
mypy = "^1.15"
flake8 = "^7.1"
black = "^25.1"

[tool.poetry.scripts]
taskaway = "taskaway.main:start_application"

[tool.black]
line-length = 120

